assets/src/scss/_single-product.scss
// Swatch
.swatch.swatch-radio {
	@apply border border-solid border-black border-opacity-25 mb-2 p-2 cursor-pointer;

	input[type=radio] {
		@apply m-0 p-0 appearance-none;
		border: 1px solid #7e8993;
		border-radius: 50%;
		background: #fff;
		color: #555;
		box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
		transition: .05s border-color ease-in-out;
		width: 1rem;
		min-width: 1rem;
		height: 1rem;


		&:focus {
			@apply border-primary;
			box-shadow: 0 0 0 1px #e42f57;
			outline: 2px solid transparent;
		}

		&:checked::before {
			float: left;
			display: inline-block;
			vertical-align: middle;
			width: 1rem;
			speak: never;
			-webkit-font-smoothing: antialiased;
			-moz-osx-font-smoothing: grayscale;
		}

		&:checked::before {
			@apply bg-primary;
			content: "";
			border-radius: 50%;
			width: 0.5rem;
			height: 0.5rem;
			margin: 0.1875rem;
			line-height: 1.14285714;
		}
	}

	label {
		display: inline-flex !important;

		span {
			color: inherit !important;
		}
	}

	&.selected {
		@apply border-primary bg-black bg-opacity-5;
	}
}

.single-product.has-inner-message {
	.extra-options {
		display: none;
	}

	.woocommerce-variation-price {
		display: none;
	}

	.variations_form {
		margin-top: 0;

		.variations {
			margin: 0;
		}
	}

	button.single_add_to_cart_button {
		width: 100%;
	}
}

.product_title_container {
	@apply flex;

	h1.product_title {
		font-size: 1.75rem;
		display: flex;
		flex-grow: 1;
	}
}

.yousaidit-card {
	@apply inline-flex items-center justify-end;
	min-width: 150px;

	&__author {
		@apply inline-flex flex-col bg-gray-200 p-2 pr-12 text-xs;
	}

	&__avatar {
		@apply border-4 border-solid bg-gray-200 border-gray-400 rounded-full -ml-8;
		width: 64px;
		height: 64px;
	}

	&__avatar-image {
		@apply rounded-full;
		width: 56px;
		height: 56px;
	}
}

.button--add-inner-message {
	margin-top: 20px;
	margin-right: 20px;
	background-color: white !important;

	span {
		color: #323232;
	}
}

.yousaidit-single-product {
	&__price {
		font-size: 2.25rem;
		line-height: 2.25rem;
		letter-spacing: 1px;
		font-weight: normal;
		display: inline-block;
		vertical-align: middle;
	}

	&__price-suffix {
		font-size: 1rem;
	}
}

